integrando o front com o back e refatorando rotas

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -43,10 +43,12 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/src/pages/receitas.html">Receitas</a>
+              <a class="nav-link" href="./receitas/receitas.html">Receitas</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Despesas</a>
+              <a class="nav-link" href="/src/pages/despesas/despesas.html"
+                >Despesas</a
+              >
             </li>
           </ul>
         </div>
