--- a/src/pages/despesas/despesas.html
+++ b/src/pages/despesas/despesas.html
@@ -8,7 +8,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../style/style.css" />
+    <link rel="stylesheet" href="/src/style/style.css" />
   </head>
   <body>
     <!-- Navbar Padronizado -->
@@ -36,12 +36,12 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/src/pages/receitas.html"
+              <a class="nav-link" href="/src/pages/receitas/receitas.html"
                 >Receitas</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/src/pages/despesas.html">Despesas</a>
+              <a class="nav-link" href="/src/pages/despesas/despesas.html">Despesas</a>
             </li>
           </ul>
         </div>
@@ -50,18 +50,18 @@
       <div class="form-container">
         <h2>Cadastro de Despesa Contábil</h2>
 
-        <form>
-          <!-- Nome da Receita -->
-          <label for="nomeReceita">Nome da Despesa:</label>
+        <form id="DespesaForm">
+          <!-- Nome da despesa -->
+          <label for="nomeDespesa">Nome da Despesa:</label>
           <input
             type="text"
-            id="nomeReceita"
+            id="nomeDespesa"
             class="form-control"
             placeholder="Nome da despesa"
             required
           />
 
-          <!-- Categoria da Receita -->
+          <!-- Categoria da despesa -->
           <label for="categoriaReceita">Categoria da Despesa:</label>
           <select id="categoriaReceita" class="form-control" required>
             <option value="">Selecione a categoria</option>
@@ -118,11 +118,9 @@
   </body>
 </html>
 
-<!-- Scripts do Bootstrap -->
-<script
-  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-pzjw8f+ua7Kw1TIq0BBw4+S2V6pt6JIRPp6lfuQ0aD8FfnJwWxD3N4R5k7Lwp2hL"
-  crossorigin="anonymous"
-></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+<script src="/src/pages/despesas/despesas.js"></script>
 </body>
 </html>
