--- a/src/pages/receitas/receitas.html
+++ b/src/pages/receitas/receitas.html
@@ -8,7 +8,7 @@
           href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
           rel="stylesheet"
         />
-        <link rel="stylesheet" href="../style/style.css" />
+        <link rel="stylesheet" href="/src/style/style.css" />
       </head>
       <body>
         <!-- Navbar Padronizado -->
@@ -36,12 +36,12 @@
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/src/pages/receitas.html"
+                  <a class="nav-link" href="/src/pages/receitas/receitas.html"
                     >Receitas</a
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/src/pages/despesas.html">Despesas</a>
+                  <a class="nav-link" href="/src/pages/despesas/despesas.html">Despesas</a>
                 </li>
               </ul>
             </div>
@@ -50,7 +50,7 @@
           <div class="form-container">
             <h2>Cadastro de Receita Contábil</h2>
 
-            <form>
+            <form id="ReceitaForm">
               <!-- Nome da Receita -->
               <label for="nomeReceita">Nome da Receita:</label>
               <input
@@ -116,12 +116,8 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
       </body>
     </html>
-
-    <!-- Scripts do Bootstrap -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-pzjw8f+ua7Kw1TIq0BBw4+S2V6pt6JIRPp6lfuQ0aD8FfnJwWxD3N4R5k7Lwp2hL"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/src/pages/receitas/receitas.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </body>
 </html>
