--- a/src/pages/despesas/despesas.html
+++ b/src/pages/despesas/despesas.html
@@ -3,55 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cadastro de Receita Contábil</title>
+    <title>Cadastrar Despesa</title>
+    <!-- Link do CSS personalizado -->
+    <link rel="stylesheet" href="/src/pages/despesas/style.css" />
+    <!-- Link do Bootstrap CSS -->
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
+      integrity="sha384-KyZXEJ7LxW7oB5k7+V5CExRChI2L3P0fLQk8Jh5W9t6p6Rt2ztHi7X5ZtXYTbhho"
+      crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/src/style/style.css" />
   </head>
   <body>
-    <!-- Navbar Padronizado -->
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">DermatoGestor</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" href="/src/pages/home.html"
-                >Home</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/src/pages/pacientes/pacientes.html"
-                >Cadastre seu paciente</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/src/pages/receitas/receitas.html"
-                >Receitas</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/src/pages/despesas/despesas.html">Despesas</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-      <div class="form-container">
-        <h2>Cadastro de Despesa Contábil</h2>
-
-        <form id="DespesaForm">
-          <!-- Nome da despesa -->
+    <div class="form-container">
+      <h1>Cadastrar Despesa</h1>
+      <form id="DespesaForm">
+        <!-- Nome da despesa -->
+        <div class="form-group mb-3">
           <label for="nomeDespesa">Nome da Despesa:</label>
           <input
             type="text"
@@ -60,19 +28,23 @@
             placeholder="Nome da despesa"
             required
           />
+        </div>
 
-          <!-- Categoria da despesa -->
+        <!-- Categoria da despesa -->
+        <div class="form-group mb-3">
           <label for="categoriaReceita">Categoria da Despesa:</label>
           <select id="categoriaReceita" class="form-control" required>
             <option value="">Selecione a categoria</option>
-            <option value="vendas">custo operacional</option>
+            <option value="vendas">Custo Operacional</option>
             <option value="servicos">Serviços</option>
             <option value="juros">Juros</option>
             <option value="alugueis">Aluguéis</option>
-            <option value="alugueis">outros</option>
+            <option value="outros">Outros</option>
           </select>
+        </div>
 
-          <!-- Valor -->
+        <!-- Valor -->
+        <div class="form-group mb-3">
           <label for="valor">Valor da Despesa:</label>
           <input
             type="number"
@@ -81,8 +53,10 @@
             placeholder="Valor da despesa"
             required
           />
+        </div>
 
-          <!-- Data de Lançamento -->
+        <!-- Data de Lançamento -->
+        <div class="form-group mb-3">
           <label for="dataLancamento">Data de Lançamento:</label>
           <input
             type="date"
@@ -90,8 +64,10 @@
             class="form-control"
             required
           />
+        </div>
 
-          <!-- Descrição -->
+        <!-- Descrição -->
+        <div class="form-group mb-3">
           <label for="descricao">Descrição:</label>
           <textarea
             id="descricao"
@@ -100,27 +76,36 @@
             rows="4"
             required
           ></textarea>
+        </div>
 
-          <!-- Botões -->
-          <div class="form-row">
-            <button type="submit" class="btn-primary">
-              Cadastrar Despesa
-            </button>
-            <a href="relatorio_receitas.html" class="btn-primary"
-              >Relatório de Despesas</a
-            >
-          </div>
-        </form>
-      </div>
+        <!-- Botões -->
+        <div class="d-flex justify-content-between mt-4">
+          <button type="submit" class="btn btn-primary w-48">
+            Cadastrar Despesa
+          </button>
+          <button
+            type="button"
+            class="btn btn-primary w-48"
+            onclick="window.location.href='/src/pages/home.html'"
+          >
+            Voltar para o Home
+          </button>
+        </div>
+
+        <button
+        type="button"
+        class="btn btn-primary w-100 mt-3 mb-4"
+        onclick="window.location.href='/src/pages/despesas/consultadespesas.html'"
+      >
+        Consultar Despesas
+      </button>
+      
+
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Scripts do Bootstrap e Axios -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="/src/pages/despesas/despesas.js"></script>
   </body>
-</html>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
-<script src="/src/pages/despesas/despesas.js"></script>
-</body>
 </html>
